update stream name

--- a/src/main/java/poc/kinesis/sample.properties
+++ b/src/main/java/poc/kinesis/sample.properties
@@ -1,7 +1,7 @@
 # Name of the topology
 topologyName = SampleTopology
 # Name of the Kinesis stream
-streamName = grit-classroom-activity
+streamName = frontend-classroom-events
 # The spout will start fetching records from this position in the stream (if a checkpoint is not present). This can be
 # set to LATEST or TRIM_HORIZON. Use TRIM_HORIZON to start processing from the oldest available record.
 initialPositionInStream = LATEST
