add a new test topology

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>kinesis-storm-spout</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-kinesis</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -39,7 +44,7 @@
                     </descriptorRefs>
                     <archive>
                         <manifest>
-                            <mainClass>poc.kinesis.SampleTopology</mainClass>
+                            <mainClass>poc.kinesis.KinesisSpoutTopology</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
