remove unused classes

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,5 +1,5 @@
 # Name of the topology
-topologyName = SampleTopology
+topologyName = KinesisSpoutTopology
 # Name of the Kinesis stream
 streamName = frontend-classroom-events
 # The spout will start fetching records from this position in the stream (if a checkpoint is not present). This can be
@@ -10,7 +10,7 @@ recordRetryLimit = 3
 # Kinesis region
 region = us-west-2
 # Zookeeper endpoint
-zookeeperEndpoint = zookeeper/172.17.0.6:2181
+zookeeperEndpoint = 172.17.0.6:2181
 # Prefix/path for storing spout state in Zookeeper
 zookeeperPrefix = kinesis_spout
 
